Modelando IPhone com UML

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
+        "conta-banco/src",
         "DesafioControleFluxo/src",
-        "conta-banco/src"
+        "IPhoneUML/src"
     ]
 }
